docs: Convert docs.fp.o/websites/ to publish from this repository
Several changes are condensed into this commit. It takes the base W&A
team documentation site, converts into a friendly format for this
repository, and modernizes all the existing content there. For
posterity's sake, the squashed commit log is below:

Signed-off-by: Justin W. Flory (he/him) [Fedora Project] <jwf@fedoraproject.org>

---

* gitignore: Add Antora build caches and output directories
* build.sh: Update from pagure.io/fedora-docs/template
* antora: Move build scripts to root directory
* Add "& Apps" to title, set start_path to docs
	* This tells the Antora playbook to look into the `docs/` directory
	  for the content to serve.
* modules: Split instructional content into new "runbook" module
	* This will be part of a growing compilation of docs and information
	  about how the Websites & Apps team is run and how we organize
	  ourselves.
* runbook: Create an index page and describe role/function of runbook
* Rewrite index page
	* This is a near-complete restructure of the index page for the W&A
	  team. This merges in relevant content and information from the
	  Sphinx docs `index.rst` file with the current `index.adoc` used
	  for the team.
	* I also restructured the opening and tried to update copy with
	  current information and approaches. Some content was removed if it
	  was no longer made sense in our current form.
* runbook: Create dedicated page about team meetings
* runbook: Add page-aliases to redirect from old URL namespace
	* Since these pages existed previously, using the `page-aliases`
	  directive will cause them to redirect to their new location in the
	  `runbook` module.
* dev: Create new module from setup documentation
	* This commit puts together a new module to gather developer
	  content. For now, this just pulls from the content that was
	  already published in the root module.
* dev: Add an index page to developer docs
* old_docs: Move remaining page from old docs i

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,6 +1,2 @@
-* xref:setup-docker.adoc[Getting Set Up (Docker)]
-* xref:setup.adoc[Getting Set Up (old method)]
 * xref:fedora-release.adoc[Fedora Beta/GA Release]
-* xref:newcontent.adoc[Creating New Content]
-** xref:newcontent-edition.adoc[New Edition]
-** xref:newcontent-site.adoc[New Site]
+* xref:translation-flow.adoc[Translation flow]
