--- a/docs/modules/runbook/pages/newcontent-edition.adoc
+++ b/docs/modules/runbook/pages/newcontent-edition.adoc
@@ -1,6 +1,7 @@
 = New Edition
-Rick Elrod
-:page-authors: {author}
+Rick Elrod; Justin W. Flory
+:page-authors: {author}, {author_2}
+:page-aliases: websites::newcontent-edition.adoc
 
 == Introduction
 
