--- a/docs/modules/runbook/pages/newcontent.adoc
+++ b/docs/modules/runbook/pages/newcontent.adoc
@@ -1,6 +1,7 @@
 = Creating New Content
-Rick Elrod
-:page-authors: {author}
+Rick Elrod; Justin W. Flory
+:page-authors: {author}, {author_2}
+:page-aliases: websites::newcontent.adoc
 
 Content can be broken into several different components, although some of the
 process is the same for all cases.
