--- a/docs/modules/runbook/pages/newcontent-site.adoc
+++ b/docs/modules/runbook/pages/newcontent-site.adoc
@@ -1,6 +1,7 @@
 = Creating A New Site
-Rick Elrod
-:page-authors: {author}
+Rick Elrod; Justin W. Flory
+:page-authors: {author}, {author_2}
+:page-aliases: websites::newcontent-site.adoc
 
 In rare cases, you might need to create an entirely new site, rather than an
 edition or page on getfedora.org.
